# AgroTerraFlow

./: Dockerfile  Makefile  README.md  create_raster.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  manuscript.yml  publish-pypi.yml
data/: demo_climate.csv  usda_cdl.tif
examples/: demo_config.yml
outputs/demo_run/: results.csv
paper/: biblio.bib  figure1_architecture.mmd  figure2_pipeline.mmd  paper.bib  paper.md  plots.py  terraflow_architecture.puml  terraflow_pipeline_activity.puml
terraflow/: __init__.py  cli.py  config.py  geo.py  ingest.py  model.py  pipeline.py  utils.py  viz.py
tests/: conftest.py  test_config.py  test_geo.py  test_model.py  test_pipeline.py
